objects/BLN_Session__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <picklist>
            <picklistValues>
                <fullName>Scan Attendee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eentdex</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BLN_Events__c</fullName>
        <label>BLN Events</label>
        <referenceTo>BLN_Event__c</referenceTo>
        <relationshipLabel>BLN Sessions</relationshipLabel>
        <relationshipName>BLN_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Device_Id__c</fullName>
        <label>Device Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PusunotificationId__c</fullName>
        <label>PusunotificationId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <label>Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BLN_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>BLN Session</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BLN_Events__c</columns>
        <columns>Status__c</columns>
        <columns>Device_Id__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SE-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BLN Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>